syntax = "proto3";

package ethereum.sharding.p2p.v1;

// TODO: Split the topics into p2p for beacon chain and p2p for sharding.
enum Topic {
  UNKNOWN = 0;
  COLLATION_BODY_REQUEST = 1;
  COLLATION_BODY_RESPONSE = 2;
  TRANSACTIONS = 3;
  BEACON_BLOCK_HASH_ANNOUNCE = 4;
  BEACON_BLOCK_REQUEST = 5;
  BEACON_BLOCK_REQUEST_BY_SLOT_NUMBER = 6;
  BEACON_BLOCK_RESPONSE = 7;
  CRYSTALLIZED_STATE_HASH_ANNOUNCE = 8;
  CRYSTALLIZED_STATE_REQUEST = 9;
  CRYSTALLIZED_STATE_RESPONSE = 10;
  ACTIVE_STATE_HASH_ANNOUNCE = 11;
  ACTIVE_STATE_REQUEST = 12;
  ACTIVE_STATE_RESPONSE = 13;
} 

message CollationBodyRequest {
  uint64 shard_id = 1;
  uint64 period = 2;
  bytes chunk_root = 3;
  bytes proposer_address = 4;
  bytes signature = 5;
}

message CollationBodyResponse {
  bytes header_hash = 1;
  bytes body = 2;
}

message Transaction {
  uint64 nonce = 1;
  uint64 gas_price = 2;
  uint64 gas_limit = 3;
  bytes recipient = 4;
  uint64 value = 5;
  bytes input = 6;
  Signature signature = 7;
}

message Signature {
  uint64 v = 1;
  uint64 r = 2;
  uint64 s = 3;
}
